--- a/index.css
+++ b/index.css
@@ -1,1 +1,114 @@
-canvas {position: absolute;left: 0;top: 0;}
+:focus {outline:none}
+input {border: none;border-radius: 0;}
+.full input, .full div, .full span {position:fixed}
+
+@import url('https://fonts.googleapis.com/css?family=Oxanium');
+
+body, html {margin:0;padding:0;text-align:center;font-family:Oxanium;overflow:hidden;background:var(--game-background)}
+
+.ball, #back, #exitLevel, #customizeButton, .levelCircle, .menu_container {cursor:pointer}
+#customize_menu {cursor:default}
+
+#back, #selector, #game, #levelSelector, #settings, #customize_menu, #customization, #customizedLevels {display:none}
+#menu, canvas, #game, #game_background, .full {position: fixed;left: 0;top: 0;width:100%;height:100%;}
+
+#menu {background:var(--menu-background);width:100%;height:100%;color:var(--menu-color);text-shadow:0 1px 2px var(--menu-shadow),0 1px 2px VAR(--menu-shadow),0 1px 2px VAR(--menu-shadow),0 1px 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow),0 0 2px VAR(--menu-shadow);font-weight:900}
+
+.menu_container {background:var(--menu_container-background);height:350px;width:300px;position: fixed;left:calc(50% - calc(150px + var(--menu_container-borderThickness)));top:100px;border-radius:var(--menu_container-borderRadius);box-shadow:0 5px 10px var(--menu_container-shadow);border: var(--menu_container-borderThickness) var(--menu_container-borderColor) solid}
+.menu_container h2 {width:100%;height:50px;line-height:50px;font-size:20px;margin:0;padding:0;}
+.menu_container h3 {width:100%;height:10px;line-height:10px;font-size:16px;margin:0;padding:0;}
+#customization {position: fixed;left:calc(50% - calc(300px + var(--menu_container-borderThickness)));top:100px;border-radius:var(--menu_container-borderRadius);box-shadow:0 5px 10px var(--menu_container-shadow);border: var(--menu_container-borderThickness) var(--menu_container-borderColor) solid;}
+.menus_customization {display:none;background:var(--menu_container-background);height:350px;width:600px;position: fixed;left:calc(50% - calc(300px + var(--menu_container-borderThickness)));top:100px;border-radius:var(--menu_container-borderRadius);box-shadow:0 5px 10px var(--menu_container-shadow);border: var(--menu_container-borderThickness) var(--menu_container-borderColor) solid;}
+.customization1 {width:50%;height:175px;background:var(--menu_container-background-top);border-radius:var(--menu_container-borderRadius) var(--menu_container-borderRadius) 0 0}
+.customization2 {width:50%;height:175px;background:var(--menu_container-background-bottom);border-radius:0 0 var(--menu_container-borderRadius) var(--menu_container-borderRadius)}
+
+.switch {left: 80px;width:calc(100% - 160px);height:10px;position:absolute;background:#666;border-radius:10px;box-shadow: 0 2px 2px #222;border:2px #000 solid;}
+.ball {position:relative;top:-7.5px;width:20px;height:20px;border:2px #000 solid;background:#fff;box-shadow: 0 2px 2px #222;border-radius:25%}
+.ball.inactive {left:-10px;background:#666;}
+.ball.active {left:calc(100% - 20px);background:#38e861;}
+.switch_name {width:100%;text-align:center;font-size:14px;height:20px;line-height:20px;position:absolute;left:0}
+
+.selector_option {width:100%;height:175px}
+.selector_option:first-child {background:var(--menu_container-background-top);border-radius:var(--menu_container-borderRadius) var(--menu_container-borderRadius) 0 0}
+.selector_option:nth-child(2) {background:var(--menu_container-background-bottom);border-radius:0 0 var(--menu_container-borderRadius) var(--menu_container-borderRadius)}
+.textMiddle {width:100%;height:50px;line-height:0;top:calc(50% - 10px);position:relative;font-size:20px}
+#levelSelector {background:var(--levelSelector-background);color:var(--levelSelector-text);width:100%;height:100%;left:0;top:0;position:fixed;overflow-x:scroll}
+#levelSelector::-webkit-scrollbar-thumb {background-color: #6669;box-shadow: 0 0 5px #000}
+#levelSelector::-webkit-scrollbar-thumb:hover{background-color: #5559}
+#levelSelector::-webkit-scrollbar-thumb:active {background-color: #4449}
+#levelSelector::-webkit-scrollbar-track {background-color:transparent}
+#levelSelector::-webkit-scrollbar {width:13px}
+
+.levelCircle {position:relative;width:50px;height:50px;background:var(--levelSelector_circleLevel-background);border-radius:50%;box-shadow: 0 2px 5px var(--levelSelector_circleLevel-shadow);line-height:50px;color:var(--levelSelector_circleLevel-color);font-weight:100;}
+
+#back, #exitLevel {position:fixed;background:var(--backButton-background);border: var(--backButton-borderThickness) var(--backButton-border) solid;border-radius: var(--backButton-borderRadius);box-shadow: var(--backButton-shadow-offsetX) var(--backButton-shadow-offsetY) var(--backButton-shadow-blur) var(--backButton-shadow);color:var(--backButton-text);width:70px;height:30px;font-size:17px;line-height:30px;text-align:center;}
+#back {left:10px;bottom:10px;}
+#exitLevel {right:10px;top:10px;}
+
+#game_background {background:var(--game-background)}
+#health {position:fixed;width:100%;left:0;top:0;text-align:center;color:var(--game-text);font-weight:100}
+#customizeButton {
+    background: var(--customize-background);
+    position: fixed;
+    left: calc(50% - calc(100px + var(--customize-border-thickness)));
+    width: 200px;
+    top: 280px;
+    border: var(--customize-border-thickness) var(--customize-border-color) solid;
+    height: 30px;
+    line-height: 30px;
+    box-shadow: var(--customize-shadow-offsetX) var(--customize-shadow-offsetY) var(--customize-shadow-blur) var(--customize-shadow-color);
+    border-radius: var(--customize-border-radius);
+}
+
+#customizeButton:active {
+    top:285px;
+    box-shadow:none;
+}
+
+@media only screen and (max-height:550px) {
+    .menu_container {top:calc(50% - calc(175px + var(--menu_container-borderThickness)))}
+}
+
+@media only screen and (max-height:350px) {
+    .menu_container {
+        width:600px;
+        height:175px;
+        top:calc(50% - calc(87.5px + var(--menu_container-borderThickness)));
+        left:calc(50% - 300px);
+        display:flex;
+    }
+    .selector_option {height:100%;width:50%}
+    .selector_option:first-child {border-radius: var(--menu_container-borderRadius) 0 0 var(--menu_container-borderRadius) !important}
+    .selector_option:nth-child(2) {border-radius: 0 var(--menu_container-borderRadius) var(--menu_container-borderRadius) 0 !important}
+}
+
+@media only screen and (max-height:175px){
+    .menu_container {
+        width:100%;
+        height:100%;
+        top:0;
+        left:0;
+        display:flex;
+        border-radius: 0;
+    }
+    .selector_option {height:100%}
+    .selector_option:first-child, .selector_option:nth-child(2) {border-radius: 0 !important}
+}
+
+/**************/
+/* Animations */
+/**************/
+
+@keyframes disappear {from{opacity:1;transform:scale(1)} to{opacity:0;transform:scale(2)}}
+@keyframes appear {from{opacity:0;transform:scale(2)} to{opacity:1;transform:scale(1)}}
+
+@keyframes opDisappear {from{opacity:1;} to{opacity:0}}
+@keyframes opAppear {from{opacity:0} to{opacity:1}}
+
+@keyframes upDown {
+    0% {top:10px}
+    50% {top:-10px}
+    100% {top:10px}
+}
+
+* {font-weight:600}
