--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+html {
+    user-select: none; /* supported by Chrome and Opera */
+   -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+   -ms-user-select: none; /* Internet Explorer/Edge */
+   image-rendering: pixelated;
+}
+
 :focus {outline:none}
 input {border: none;border-radius: 0;}
 .full input, .full div, .full span {position:fixed}
@@ -46,7 +55,6 @@ body, html {margin:0;padding:0;text-align:center;font-family:Oxanium;overflow:hi
 #exitLevel {right:10px;top:10px;}
 
 #game_background {background:var(--game-background)}
-#health {position:fixed;width:100%;left:0;top:0;text-align:center;color:var(--game-text);font-weight:100}
 #customizeButton {
     background: var(--customize-background);
     position: fixed;
@@ -126,6 +134,26 @@ body, html {margin:0;padding:0;text-align:center;font-family:Oxanium;overflow:hi
 }
 
 /**************/
+/**** Game ****/
+/**************/
+
+.cooldownBorder {width:30px;height:30px;border:10px #2e234eaa solid;display:none;margin-top:20px;}
+.cooldownBackground {width:30px;height:30px;background:#3d3067aa;overflow:hidden;position:relative;display:none}
+.cooldownFill {width:30px;height:100%;background:#fffa;left: 0;bottom: 0;position:absolute}
+
+#cooldowns {top:105px;left:40px;position:absolute;display:grid;}
+
+.information {position:absolute;width:250px;height:150px;background:#100c1c;display:none;color: var(--game-text);padding:20px;text-align:left;box-shadow: 0 5px #0006;}
+.information h2 {padding:5px 0 5px 0;margin:0;font-size:20px;line-height:20px;}
+.information div {background-image:linear-gradient(90deg, #aaa, #fff);width:100%;height:1px;margin-bottom:10px}
+.information p {margin:0;padding:0;font-size:12px}
+
+#healthInformation {bottom:115px;right:25px}
+#healthNew {background-image: url(/Files/GUI.png);width:75px;height:75px;background-size:100%;position:absolute;right:25px;bottom:25px;box-shadow:0 5px #0006}
+#healthBackground {width:51px;height:51px;right:37px;bottom:37px;position:absolute;background:#06000d;overflow:hidden;}
+#healthFill {width:51px;height:100%;position:absolute;background:#46d56a;left: 0;bottom: -51px;}
+
+/**************/
 /* Animations */
 /**************/
 
@@ -151,5 +179,8 @@ body, html {margin:0;padding:0;text-align:center;font-family:Oxanium;overflow:hi
     to {opacity:0;transform: translateX(200px);}
 }
 
+@keyframes damaged {0%{}50%{transform:rotate(10deg);box-shadow:0 0 10px #a31111}100%{}}
+@keyframes healed {0%{}50%{transform:rotate(10deg);box-shadow:0 0 10px #46d56a}100%{}}
+@keyframes rotate {0%{}50%{transform:rotate(10deg)}100%{}}
 
 * {font-weight:600}
